--- a/ionic/storage/src/app/list-items-component/list-items-component.component.html
+++ b/ionic/storage/src/app/list-items-component/list-items-component.component.html
@@ -5,6 +5,7 @@
 </ion-header>
 
 <ion-content>
+  <ion-searchbar show-clear-button="focus" placeholder="Search" (ionInput)="searchItems($event)"></ion-searchbar>
   <ion-list>
     <ion-item *ngFor="let item of items$ | async">
       <ion-thumbnail slot="start">
@@ -16,13 +17,13 @@
         <p>Quantity: {{ item.quantity }}</p>
         <p>IP: {{ item.ip }}</p>
         <ion-button fill="outline" size="small" color="danger" (click)="deleteItem(item.id)">Delete</ion-button>
-        <ion-button fill="outline" size="small" color="primary">Edit</ion-button>
+        <ion-button fill="outline" size="small" color="primary" (click)="goToEdit(item.id)">Edit</ion-button>
         <ion-button fill="outline" size="small" color="secondary" (click)="locateItem(item.id)">Locate</ion-button>
       </ion-label>
     </ion-item>
   </ion-list>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click) = "redirect()">
+    <ion-fab-button (click) = "goToAdd()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
