--- a/ionic/storage/src/app/list-items-component/list-items-component.component.scss
+++ b/ionic/storage/src/app/list-items-component/list-items-component.component.scss
@@ -11,3 +11,11 @@
   display: inline-block;
   font-size: 1rem;
 }
+
+.action-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1em;
+  gap: 10px;
+}
