--- a/ionic/storage/src/app/list-items-component/list-items-component.component.html
+++ b/ionic/storage/src/app/list-items-component/list-items-component.component.html
@@ -7,36 +7,53 @@
 <ion-content>
   <ion-searchbar show-clear-button="focus" placeholder="Search" (ionInput)="searchItems($event)"></ion-searchbar>
   <ion-list>
-    <ion-item *ngFor="let item of items$ | async">
-      <ion-thumbnail slot="start">
-        <ion-img [src]="item.image ? item.image : null"></ion-img>
-      </ion-thumbnail>
-      <ion-label>
+    <ion-item *ngFor="let item of items$ | async" class="item-card">
+      <ion-grid>
         <ion-row>
-          <ion-col>
-            <h2>{{ item.name }}</h2>
+          <h2>{{ item.name }}</h2>
+        </ion-row>
+        <ion-row>
+          <ion-col size="6">
+
             <p>Position: {{ item.position }}</p>
             <p>Quantity: {{ item.quantity }}</p>
             <p>IP: {{ item.ip }}</p>
           </ion-col>
-          <ion-col>
-            <div class="action-buttons">
-              <ion-button (click)="increaseQuantity(item)">+</ion-button>
-              <p>{{item.quantity}}</p>
-              <ion-button [disabled]="item.quantity === 1" (click)="decreaseQuantity(item)">-</ion-button>
+          <ion-col size="6">
+            <div class="img-container">
+              <ion-img [src]="item.image ? item.image : null"></ion-img>
             </div>
           </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-button fill="outline" size="small" color="danger" (click)="deleteItem(item.id)">Delete</ion-button>
-        <ion-button fill="outline" size="small" color="primary" (click)="goToEdit(item.id)">Edit</ion-button>
-        <ion-button fill="outline" size="small" color="secondary" [disabled]="!item.ip" (click)="locateItem(item)">Locate</ion-button>
-        </ion-row>
 
-      </ion-label>
+        </ion-row>
+        <ion-row class="full-width-row">
+              <ion-button fill="outline" size="small" color="primary" (click)="goToEdit(item.id)">
+                <ion-icon name="create-outline"></ion-icon>  <!-- Edit Icon -->
+            </ion-button>
+            <ion-button fill="outline" size="small" color="danger" (click)="deleteItem(item.id)">
+                <ion-icon name="trash-outline"></ion-icon>  <!-- Delete Icon -->
+            </ion-button>
+            <ion-button fill="outline" size="small" color="secondary" [disabled]="!item.ip" (click)="locateItem(item)">
+              <ion-icon name="locate-outline"></ion-icon>  <!-- Locate Icon -->
+          </ion-button>
+          <ion-button fill="outline" size="small" color="secondary" [disabled]="!item.link" (click)="openLink(item.link)">
+              <ion-icon name="cart-outline"></ion-icon>  <!-- Buy Icon -->
+          </ion-button>
 
+
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-button [disabled]="item.quantity === 1" (click)="decreaseQuantity(item)">-</ion-button>
+          <span class="quantity">{{item.quantity}}</span>
+          <ion-button (click)="increaseQuantity(item)">+</ion-button>
+      </ion-row>
+
+      </ion-grid>
     </ion-item>
   </ion-list>
+
+
+
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click) = "goToAdd()">
       <ion-icon name="add"></ion-icon>
