--- a/ionic/storage/src/app/list-items-component/list-items-component.component.scss
+++ b/ionic/storage/src/app/list-items-component/list-items-component.component.scss
@@ -1,21 +1,24 @@
-.img-container {
-  width: 100px;
-  height: 100px;
-  background-color: #ccc;
-  text-align: center;
-  line-height: 100px;
+
+.full-width-row {
+  --padding-start: 0;
+  --padding-end: 0;
 }
 
-.image-error:before {
-  content: attr(data-name);
-  display: inline-block;
-  font-size: 1rem;
+.full-width-row ion-button {
+  flex-grow: 1;
 }
 
-.action-buttons {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 1em;
-  gap: 10px;
+.item-card {
+  box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.15);  /* Shadow effect */
+  border-radius: 10px;  /* Rounded corners */
+  border: 1px solid var(--ion-color-step-200);  /* Light border */
+  padding: 15px;  /* Some padding */
+  margin: 1em;  /* Some space at the bottom */
+  background-color: var(--ion-color-step-50);  /* White or dark background based on theme */
+  --inner-border-width: 0;
+}
+
+.quantity{
+  margin-left: 1em;
+  margin-right: 1em;
 }
